Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignIntObjIntObj.quorum
class Main
    action main
        Integer i
        Integer int
        i:setValue(5)
        int = cast(Integer, i)
        if int:GetValue() = 5
            output "passed"
        end
    end
end