Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignIntObjIntegerWrapped.quorum
class main
    action Main
        integer i = 5
        Integer int = i
    end
end